force-app/main/default/objects/LT_Commercial_Agreement__c/LT_Commercial_Agreement__c.object-meta.xml
<CustomObject>
    <description>Contrato comercial firmado com um embarcador: vigência, preço por pacote, volume mínimo, prazo de pagamento e SLA acordado.</description>
    <label>Contrato Comercial</label>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>Código do Contrato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contratos Comerciais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>