force-app/main/default/objects/LT_Commercial_Agreement__c/fields/LT_Agreement_Commercial_Rep__c.field-meta.xml
<CustomField>
    <fullName>LT_Agreement_Commercial_Rep__c</fullName>
    <description>Executivo comercial responsavel pela negociacao deste contrato.</description>
    <label>Executivo Comercial</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Contratos Comerciais</relationshipLabel>
    <relationshipName>LT_Agreements_As_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>