force-app/main/default/objects/LT_Commercial_Agreement__c/fields/LT_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>LT_Agreement_Status__c</fullName>
    <description>Situacao atual do contrato comercial no seu ciclo de vida.</description>
    <inlineHelpText>Apenas contratos Vigentes valem para faturamento. Encerre via status, nunca exclua.</inlineHelpText>
    <label>Status do Contrato</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Rascunho</fullName><default>true</default><label>Rascunho</label></value>
            <value><fullName>Em Aprovacao</fullName><default>false</default><label>Em Aprovacao</label></value>
            <value><fullName>Vigente</fullName><default>false</default><label>Vigente</label></value>
            <value><fullName>Suspenso</fullName><default>false</default><label>Suspenso</label></value>
            <value><fullName>Encerrado</fullName><default>false</default><label>Encerrado</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>