force-app/main/default/objects/LT_Commercial_Agreement__c/fields/LT_End_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_End_Date__c</fullName>
    <description>Data de encerramento previsto da vigencia do contrato.</description>
    <label>Fim da Vigencia</label>
    <type>Date</type>
</CustomField>