force-app/main/default/objects/LT_Commercial_Agreement__c/fields/LT_Minimum_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>LT_Minimum_Monthly_Volume__c</fullName>
    <description>Volume minimo mensal de pacotes contratado.</description>
    <label>Volume Minimo Mensal (pacotes)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>