force-app/main/default/objects/LT_Commercial_Agreement__c/fields/LT_Payment_Term_Days__c.field-meta.xml
<CustomField>
    <fullName>LT_Payment_Term_Days__c</fullName>
    <description>Prazo de pagamento em dias apos o fechamento do faturamento mensal.</description>
    <label>Prazo de Pagamento (dias)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>