force-app/main/default/objects/LT_Commercial_Agreement__c/fields/LT_Price_Per_Package__c.field-meta.xml
<CustomField>
    <fullName>LT_Price_Per_Package__c</fullName>
    <description>Valor pago pelo embarcador por pacote entregue, conforme negociacao comercial.</description>
    <inlineHelpText>Preco unitario por pacote entregue (R$).</inlineHelpText>
    <label>Preco por Pacote</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>