force-app/main/default/objects/LT_Commercial_Agreement__c/fields/LT_Shipper__c.field-meta.xml
<CustomField>
    <fullName>LT_Shipper__c</fullName>
    <description>Embarcador (Conta) coberto por este contrato comercial.</description>
    <inlineHelpText>Selecione a conta do embarcador. Deve ser uma conta do tipo Embarcador.</inlineHelpText>
    <label>Embarcador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos Comerciais</relationshipLabel>
    <relationshipName>LT_Commercial_Agreements</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
    <lookupFilter>
        <active>true</active>
        <errorMessage>O contrato comercial so pode ser vinculado a contas do tipo Embarcador.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>LT_Shipper</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
</CustomField>