force-app/main/default/objects/LT_Commercial_Agreement__c/fields/LT_SLA_Target__c.field-meta.xml
<CustomField>
    <fullName>LT_SLA_Target__c</fullName>
    <description>Meta de SLA de entrega no prazo acordada com o embarcador.</description>
    <inlineHelpText>Percentual minimo de entregas no prazo previsto em contrato.</inlineHelpText>
    <label>Meta de SLA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>