force-app/main/default/objects/LT_Commercial_Agreement__c/fields/LT_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Start_Date__c</fullName>
    <description>Data de inicio da vigencia do contrato.</description>
    <label>Inicio da Vigencia</label>
    <type>Date</type>
</CustomField>