force-app/main/default/objects/LT_Commercial_Agreement__c/validationRules/LT_Agreement_Price_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Agreement_Price_Positive</fullName>
    <active>true</active>
    <description>O preco por pacote deve ser maior que zero quando informado.</description>
    <errorConditionFormula>AND( NOT(ISBLANK(LT_Price_Per_Package__c)), LT_Price_Per_Package__c &lt;= 0 )</errorConditionFormula>
    <errorDisplayField>LT_Price_Per_Package__c</errorDisplayField>
    <errorMessage>Informe um Preco por Pacote maior que zero.</errorMessage>
</ValidationRule>