force-app/main/default/objects/LT_Commercial_Agreement__c/validationRules/LT_Agreement_SLA_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Agreement_SLA_Range</fullName>
    <active>true</active>
    <description>A meta de SLA deve estar entre 0 e 100 por cento.</description>
    <errorConditionFormula>AND( NOT(ISBLANK(LT_SLA_Target__c)), OR(LT_SLA_Target__c &lt; 0, LT_SLA_Target__c &gt; 1) )</errorConditionFormula>
    <errorDisplayField>LT_SLA_Target__c</errorDisplayField>
    <errorMessage>A Meta de SLA deve estar entre 0% e 100%.</errorMessage>
</ValidationRule>