force-app/main/default/objects/LT_Commercial_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LT_Shipper__c</columns>
    <columns>LT_Agreement_Status__c</columns>
    <columns>LT_Price_Per_Package__c</columns>
    <columns>LT_Start_Date__c</columns>
    <columns>LT_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>