force-app/main/default/objects/LT_Commercial_Agreement__c/listViews/Vigentes.listView-meta.xml
<ListView>
    <fullName>Vigentes</fullName>
    <columns>NAME</columns>
    <columns>LT_Shipper__c</columns>
    <columns>LT_Agreement_Status__c</columns>
    <columns>LT_Price_Per_Package__c</columns>
    <columns>LT_Minimum_Monthly_Volume__c</columns>
    <columns>LT_Start_Date__c</columns>
    <columns>LT_End_Date__c</columns>
    <columns>LT_SLA_Target__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Agreement_Status__c</field>
        <operation>equals</operation>
        <value>Vigente</value>
    </filters>
    <label>Contratos Vigentes</label>
</ListView>